# orbitsim

./: CMakeLists.txt  LICENSE  README.md  main.cpp  plot_orbits.py  visualize_events.py  visualize_frame_comparison.py  visualize_hybrid_kepler_nbody.py  visualize_lambert_transfer.py  visualize_synodic.py  visualize_synodic_bodies.py
docs/: USAGE.md
include/orbitsim/: coordinate_frames.hpp  ephemeris.hpp  events.hpp  frame_spec.hpp  frame_utils.hpp  frames.hpp  game_sim.hpp  geodesy.hpp  integrators.hpp  kepler.hpp  kepler_approach.hpp  kepler_apsides.hpp  kepler_crossings.hpp  kepler_events.hpp  kepler_maneuver.hpp  kepler_trajectory.hpp  lambert.hpp  maneuvers.hpp  maneuvers_builders.hpp  maneuvers_types.hpp  math.hpp  nbody.hpp  nodes.hpp  orbit_utils.hpp  orbitsim.hpp  soi.hpp  spacecraft_lookup.hpp  spacecraft_state_cache.hpp  synodic.hpp  time_utils.hpp  trajectories.hpp  trajectory_events.hpp  trajectory_segments.hpp  trajectory_transforms.hpp  trajectory_types.hpp  types.hpp
include/orbitsim/detail/: proximity_tracking.hpp  simulation_stepping.hpp  spacecraft_propagation.hpp
tests/: coordinate_frames_gtest.cpp  frames_gtest.cpp  game_simulation_gtest.cpp  geodesy_gtest.cpp  kepler_gtest.cpp  lambert_gtest.cpp  maneuvers_gtest.cpp  math_gtest.cpp  nodes_gtest.cpp  orbitsim_gtest.cpp  soi_rails_gtest.cpp  spacecraft_state_cache_gtest.cpp  test_helpers.hpp  trajectories_gtest.cpp
tools/: plot_orbits.py
